Fixes to images & checkout
# ADDITIONS
+ added stripe link payments
+ we now hide eu vat for non eu countries
+ added beebom reference

# FIXES
+ fixed a bug where safari & firefox doesn’t handle exif orientation when loading image into imageBitmap while resizing.
+ Updated browser exif detection to use imagebitmap too and all should be fixed now. this was causing images to be stretched or rotated.

--- a/source/css/plans.css
+++ b/source/css/plans.css
@@ -400,8 +400,9 @@ BILLING CARD
     grid-column: 2/7;
     grid-row: 5/8;
 
-    grid-template-columns: 11rem 5rem 4rem;
+    grid-template-columns: 1fr 1fr;
     grid-auto-rows: max-content;
+    column-gap: 0.5rem;
 
     padding: 4rem 0;
 }
@@ -500,10 +501,10 @@ body:not([discount]) #discount-tag {
 }
 
 #billing input + small {
-    margin: 0.25rem 0 2rem 0;
+    margin: 0.25rem 0 0rem 0;
     
     grid-column: 1/-1;
-    text-align: center;
+    text-align: left;
 
     color: var(--cryptee-red);
     
@@ -552,17 +553,18 @@ body:not([discount]) #discount-tag {
 #billing input.error  { box-shadow: 0 0 0 2px var(--cryptee-red) !important; }
 
 #card-pan {
-    grid-column: span 1;
-    width: calc(100% - 0.5rem);
+    grid-column: 1/-1;
+    padding: 0 0.65rem 0 1rem; /* accommodate link */
 }
 
 #card-exp {
     grid-column: span 1;
-    width: calc(100% - 0.5rem);
+    padding: 0 1rem;
 }
 
 #card-cvc {
     grid-column: span 1;
+    padding: 0 1rem;
 }
 
 #card-details, .stripe-input, #billing-name {
@@ -581,7 +583,8 @@ body:not(.billing) .stripe-input {
 
 
 #countries {
-    width: calc(100% - 0.5rem);
+    grid-column: span 1;
+    width: 100%;
     padding: 0 1rem;
     text-align: left;
     text-indent: 0;
@@ -595,13 +598,11 @@ body:not(.billing) .stripe-input {
     line-height: 2rem;
     grid-column: span 1;
     color: #000 !important;
-    grid-column: span 2;
-    text-align: center !important;
-    padding-left: 0 !important;
+    grid-column: span 1;
 }
 
 #billing-name, #billing-email {
-    grid-column: span 3;
+    grid-column: 1/-1;
     margin-top: 0;
     margin-bottom: 0 !important;
 }
